End of Section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "daybln2pi",
+    "ApiKey": "931411824336556",
+    "ApiSecret": "5VE2I3EKdruA98dvfUoWAjYKH3Y"
+  }
 }
