--- a/DatingApp.API/DatingApp.API.csproj
+++ b/DatingApp.API/DatingApp.API.csproj
@@ -9,5 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1"/>
+    <PackageReference Include="CloudinaryDotNet" Version="1.3.1"/>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1"/>
   </ItemGroup>
 </Project>
